src/styles/less/main.less
@borderColor: #d1d4d7;
@fontColor: #888;
@clickColor: #ddd;
@notpass: #FF4545;

body, #app {
  width: 100vw;
  position: relative;
  background-color: #f5f6f7;
}
.mainPage {
  height: 100%;
  width: 100%;
  margin: 50px 0;
}
h2 {
  font-size: 1.5em;
}
h3 {
  font-size: 1.2em;
  margin: 0px;
}
p {
  margin: 0px;
}

[v-cloak] { display: none; }

nav { 
  display: flex;
  flex-direction: column;
  justify-content: center;
  
  position: fixed;
  top: 0;
  z-index: 2;

  height: 50px;
  width: 100%;
  box-shadow: 0 0 5px rgba(0,0,0,.1);
  
  background-color: #fff;
  border-bottom: 1px solid @borderColor;

  header {
    position: relative;
    h1 {
      margin: 0px;
      font-size: 1.3em;
      text-align: center;
    }
    #setting {
      margin-right: 5px;
      font-size: 1.3em;
      color: @fontColor;
      position: absolute;
      top: 0;
      right: 0;
      &:hover, &:focus {
        color: @clickColor;
      }
    }
  }
}
footer { 
  display: flex;
  flex-direction: column;
  justify-content: center;

  position: fixed;
  bottom: 0;
  z-index: 2;

  height: 50px;
  width: 100%;
  box-shadow: 5px 0 0 0 rgba(0,0,0,.1);
  
  background-color: #fff;
  border-top: 1px solid @borderColor;

  ul {
    height: 100%;
    
    margin-bottom: 0px;
    padding-left: 0px;
    list-style: none;
    li {
      float: left;
      height: 100%;
      width: 25%;
      &.active, &.hover, &.focus {
        p {
         color: #3498db;
        }
      }
      p {
        color: @fontColor;
        text-align: center;
        margin-bottom: 0px;
        &:nth-child(1) {
          font-size: 1.5em !important;
        }
      }
    }
  }
}

#login {
  height: 100vh;
  width: 100vw;

  position: fixed;
  z-index: 3;

  background: #eee url('../img/loginbg.png') repeat center center;
  .loading {
    margin-top: 10px;
    color: #444;
    display: block;
    margin: 0px auto;
    opacity: 0;

    position: absolute;
    left: 0;
    right: 0;
    bottom: 25px;
  }
}

#creditCalc {
  &.container {
    padding: 0px;
  }
  table {
    width: 100%;
    td {
      padding: 0px 10px;
    }
    .calcBlock:nth-child(1) {
      border-right: 1px solid @borderColor;
    }
  }
  .calcBlock {
    position: relative;
    border-bottom: 1px solid @borderColor;
    
    &:nth-child(1) {
      border-right: 1px solid @borderColor;
    }
    // &:nth-child(4) {
    //   border-left: 1px solid @borderColor;
    //   border-top: 1px solid @borderColor;
    // }
    // &:nth-child(5), &:nth-child(6) {
    //   border-top: 1px solid @borderColor;
    // }
    .category {
      position: absolute;
      top: 5px;

      font-size: 1.3em;
    }
    .editNeed {
      color: @fontColor;
      font-size: 1.2em;
      position: absolute;
      top: 10px;
      right: 10px;
      &:hover, &:focus {
        color: @clickColor;
      }
    }
  }
  #tot {
    .calc {
      font-size: 1.8em;
    }
  }
  .calc {
    font-size: 1.5em;
    text-align: center;
  }
  #other, #service, #english {
    font-size: 1.3em;
    padding: 10px 0px;
  }
}

.circle-progress {
  .highcharts-credits {
    display: none;
  }
  .timer {
    display: none;
  }
  svg g {
    display: none;
  }
}

#subjectList {
  h3 {
    font-size: 1.3em;
    padding: 10px 0px;
  }
  .subjectInfo {
    display: flex;
  }
  .subjectTitle, .subjectList {
    width: 50%;
  }
  .subjectList {
    text-align: right;
  }
}

#list, #subjectList {
  ul {
    height: 100%;
    
    padding-left: 0px;
    list-style: none;
    li {
      display: flex;
      align-items: center;
      color: @fontColor;

      padding: 5px 0px;
      
      border-bottom: 1px solid @borderColor;
      &:first-child {
        border-top: 1px solid @borderColor;
      }
      &.notpass {
        color: @notpass;
      }
      .list-text {
        height: 50px;
        width: 80%;
      }
      .list-credit, .list-icon {
        display: flex;
        align-items: center;
        justify-content: center;

        height: 50px;
        width: 10%;
        border-left: 1px solid @borderColor;
      }
      .list-icon {
        border-right: 1px solid @borderColor;
      }
      .title {
        font-size: 1.2em;
        padding-bottom: 5px;
      }
      .subject {
        font-size: 1em;
      }
      .title, .subject {
        text-align: left;
      }
      p {
        text-align: center;
      }
    }
  }
}

#timetable {
  .title {
    font-size: 1.5em;
    text-align: center;
  }
  table {
    width: 100%;
    margin-bottom: 10px;
  }
  th {
    width: 19%;
    &:first-child {
      width: 5%;
    }
  }
  th, td {
    border: 1px #666 solid;
    text-align: center;
    color: #666;
    height: 30px;
  }
}
.courseInfo {
  li {
  }
}

#profile {
  button {
    border: none;
    cursor: pointer;
    border-radius: 3px;
    background: #eee;
    padding: 6px;
    width: 100%;
    color: #fff;
    display: block;
    margin: 0px auto;
    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2);
    &:hover {
      -webkit-transform: translateY(-3px);
              transform: translateY(-3px);
      box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
    }
    &.login {
      background: #F49393;
    }
  }
  ul {
    height: 100%;
    
    padding-left: 0px;
    list-style: none;
    li {
      display: flex;
      align-items: center;
      color: @fontColor;

      padding: 5px 0px;
      text-align: left;

      border-bottom: 1px solid @borderColor;
      font-size: 1.3em;
      &:first-child {
        border-top: 1px solid @borderColor;
      }
      .list-text {
        width: 80%;
      }
      .list-credit, .list-icon {
        display: flex;
        align-items: center;
        justify-content: center;

        width: 10%;
        border-left: 1px solid @borderColor;
      }
      .list-icon {
        border-right: 1px solid @borderColor;
      }
      p {
        text-align: center;
      }
    }
  }
}
#tableView {
  label {
    border: 1px solid #3498db;
    color: #3498db;
  }
  .active {
    background-color: #3498db;
    color: #eee;
  }
  .list-text {
    width: 50% !important;
  }
  .list-btn {
    text-align: right;
    width: 50% !important;
  }
}

